Test for GET not empty