@@ -1,18 +1,19 @@
 package com.example.demo.controllers;
 
-import java.util.Collections;
 import java.util.List;
 
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.example.demo.model.Artist;
 
 @RestController
+@RequestMapping("/api/artists")
 public class ArtistRestController {
 
-	@GetMapping("/api/artists")
+	@GetMapping
 	public List<Artist> allArtists() {
-		return Collections.emptyList();
+		return List.of(new Artist(1L, "Pablo Picasso", "Spanish"));
 	}
 }
